# flask-blog

./: .gitignore  Procfile  myapp.py  pyproject.toml  requirements.txt
migrations/versions/: 102a27d9cbb0_create_posts_and_users_tables.py  351882976687_update_user_model.py  50eced9fb212_カラム名変更.py  7100a6ada1ff_add_img_name.py  edade254b7d2_create_user_model.py
static/css/: style.css
templates/: admin.html  base.html  create.html  index.html  login.html  readmore.html  signup.html  update.html
